MonetDB4/src/modules/plain/Tests/mmath.stable.out.SunOS
stdout of test 'mmath` in directory 'src/modules/plain` itself:


# 05:50:29 >  
# 05:50:29 >  Mtimeout -timeout 60 Mserver "--config=/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/src/modules/plain/.libs:/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/src/modules/contrib/.libs:/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/src/modules/calibrator/.libs:/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/src/mapi/.libs" --set "gdk_dbfarm=/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/dbfarm" --set "sql_logdir=/var/tmp/monet.GNU_64-d.9327/MonetDB/SunOS5.8/log" --set mapi_port=49443 --set sql_port=58791 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath.milM
# 05:50:29 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for sparc-sun-solaris2.8/64bit; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");

setoid(oid(20000000));

# NOTE: If there would be a system with large enough doubles than
#       the expression could actually produce a correct output...
#       (unlikely with IEEE(like) floating point types though)
pow(2.0LL,5000.0LL).print();
[ Infinity ]
isinf(pow(2.0LL,5000.0LL)).print();
[ 1 ]
pow(-2.0LL,5001.0LL).print();
[ -Infinity ]
isinf(pow(-2.0LL,5001.0LL)).print();
[ -1 ]
	
finite(1.0LL).print();
[ true ]
finite(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: finite(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
finite(pow(2.0LL,5000.0LL)).print();
[ false ]
finite(pow(-2.0LL,5001.0LL)).print();
[ false ]

quit();

# 05:50:30 >  
# 05:50:30 >  Done.
# 05:50:30 >  
